molly adding carlos website

--- a/Projects.html
+++ b/Projects.html
@@ -16,23 +16,32 @@ margin: 0px;
 </head>
 
 
-
 <body
 
 </style>
 
 <body>
 
+<body/>
+<style type="text/css">
+    #p2
+    font-size: 20px;
+</style>
+<body>
+<div id="p1">
+<p>   This is my first animation.
+
+<a href="animation.html">
+Projects</a>
+
+</style>
 
 
-{P
-
-
-
-}
 
 </body>
-
+<div>
+	<div id="P1">
+</div>
 
 
 </html>
