--- a/Projects.html
+++ b/Projects.html
@@ -29,11 +29,34 @@ margin: 0px;
 </style>
 <body>
 <div id="p1">
-<p>   This is my first animation.
+<p>   This is my fixed animation.
 
 <a href="animation.html">
 Projects</a>
-
+<p>
+	This is my square quilt.
+	<a href="squarequilt.html">
+		squarequilt
+	</a>
+	<p>
+		This is my random array.
+		<a href="array.html">
+			array
+		</a>
+	</p>
+	<p>
+		This is my follow your mouse squarequilt
+		<a href="Followmouse.html">
+			Mouse follower
+		</a>
+	</p>
+	<p>
+		This is my Audio file with a play and pause button.
+		<a href="Music.html">
+			Luca maxim
+		</a>
+		
+</p>
 </style>
 
 
