--- a/journal.html
+++ b/journal.html
@@ -36,7 +36,12 @@ This is my first journal entry ever. Today we learned about a highschooler calle
 <br>
 <p>   Reports are due and my website is looking good I'm still having touble with my projects but its taking a bit of time. Im wokring on a hover animation but it just doesnt want to work. I've mastered how to work in terminal and I'm pushing all my work online.
 </p>          
-
+<p>
+    I've finished my squarequilt and my javascript its going really well and I've started to do some cool designs. Argentina qualified so I'm happy I might make a soccer page.
+</p>
+<p>
+    my square quilt are bangers I was working with an array that is really cool. Almost done with the semester. My square quilt that makes a div follow your mouse took a while but I'm really liking the end product. I have a lot of projects due on 12/12/22 it's Santi Bday so we went out to eat.
+</p>
 
 </body>
 </html>
