--- a/Projects.html
+++ b/Projects.html
@@ -57,6 +57,19 @@ Projects</a>
 		</a>
 		
 </p>
+<p>
+		This is my Valentines Day card.
+		<a href="Valentines.html">
+			Valentines day
+		</a>
+		
+</p>
+<p>
+			This is my car project.
+			<a href="Car2.html">
+				Vroom Vroom
+			</a>
+		</p>
 </style>
 
 
