--- a/journal.html
+++ b/journal.html
@@ -34,7 +34,7 @@ This is my first journal entry ever. Today we learned about a highschooler calle
 <p> This is my third Journal entry. I've finished my webiste but I still need to work on some things im exictied to watch messi win the 2022 world cup but its during school so Idk what im going to do. I understand the animation its on my projects page but I'm having a bit of trouble with it.
 </p>
 <br>
-<p>   Reports are due and my website is looking good I'm still having touble with my projects but its taking a bit of time. Im wokring on a hover animation but it just doesnt want to work. I've mastered how to work in terminal and I'm pushing all my work online.
+<p>   Reports are due and my website is looking good I'm still having touble with my projects but its taking a bit of time. Im wokring on a hover animation but it just doesnt want to work. I added four hearts.I've mastered how to work in terminal and I'm pushing all my work online.
 </p>          
 <p>
     I've finished my squarequilt and my javascript its going really well and I've started to do some cool designs. Argentina qualified so I'm happy I might make a soccer page.
@@ -42,6 +42,8 @@ This is my first journal entry ever. Today we learned about a highschooler calle
 <p>
     my square quilt are bangers I was working with an array that is really cool. Almost done with the semester. My square quilt that makes a div follow your mouse took a while but I'm really liking the end product. I have a lot of projects due on 12/12/22 it's Santi Bday so we went out to eat.
 </p>
-
+<p>
+    I made a valentines day card for my sister because she is in a boarding school and I'm seeing her this weekend. I used 4 animations that rotated the hearts and changed the color of the hearts from red to a brighter red. I added a background image but it stopped working for some reason so I had to revert it to pink.
+</p>
 </body>
 </html>
